--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-router": "^1.121.2",
     "@tanstack/react-router-devtools": "^1.121.2",
+    "axios": "^1.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
