--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.0",
     "jsdom": "^26.0.0",
+    "postcss": "^8.4.0",
     "sass": "^1.89.2",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
     "vitest": "^3.0.5",
