--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^1.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
